# codi-stack

./: README.md  ROADMAP.md  SETUP_COMPLETE.md  a.py  b.py  build-all.sh  c.py  deploy.sh  docker-compose.yml
codibase/: CLAUDE.md  (+3 more)
codibase-gateway/: build.gradle.kts
pilotcodi/crates/tabby-download/: Cargo.toml
pilotcodi/crates/tabby-download/src/: lib.rs
pilotcodi/crates/tabby-index-cli/: Cargo.toml  README.md
pilotcodi/crates/tabby-index-cli/src/: main.rs
pilotcodi/crates/tabby-index-cli/src/commands/: head.rs
pilotcodi/ee/tabby-schema/: Cargo.toml
pilotcodi/ee/tabby-schema/examples/: update-schema.rs
pilotcodi/ee/tabby-schema/src/: dao.rs  env.rs  lib.rs  policy.rs
pilotcodi/ee/tabby-schema/src/schema/: context.rs  ingestion.rs  mod.rs  retrieval.rs
pilotcodi/ee/tabby-schema/src/schema/repository/: mod.rs  third_party.rs
pilotcodi/ee/tabby-schema/src/schema/thread/: inputs.rs  types.rs
pilotcodi/ee/tabby-webserver/: Cargo.toml
pilotcodi/ee/tabby-webserver/docs/: api_spec.md
pilotcodi/ee/tabby-webserver/email_templates/: invitation.html  password_reset.html  signup_success.html  test.html
pilotcodi/ee/tabby-webserver/src/: hub.rs  jwt.rs  ldap.rs  lib.rs  path.rs  webserver.rs
pilotcodi/ee/tabby-webserver/src/axum/: mod.rs
pilotcodi/ee/tabby-webserver/src/oauth/: github.rs  gitlab.rs  google.rs  mod.rs
pilotcodi/ee/tabby-webserver/src/routes/: hub.rs  ingestion.rs  mod.rs  oauth.rs
pilotcodi/ee/tabby-webserver/src/routes/repositories/: mod.rs  resolve.rs
pilotcodi/ee/tabby-webserver/src/service/: access_policy.rs  analytic.rs  answer.rs  auth.rs  context.rs  embedding.rs  event_logger.rs  ingestion.rs  integration.rs  job.rs  license.rs  mod.rs  notification.rs  page.rs  retrieval.rs  setting.rs  thread.rs  user_event.rs  user_group.rs  web_documents.rs
pilotcodi/ee/tabby-webserver/src/service/answer/: prompt_tools.rs
pilotcodi/ee/tabby-webserver/src/service/answer/testutils/: mod.rs
pilotcodi/ee/tabby-webserver/src/service/auth/: testutils.rs
pilotcodi/ee/tabby-webserver/src/service/background_job/: daily.rs  db.rs  git.rs  hourly.rs  index_commits.rs  index_garbage_collection.rs  index_ingestion.rs  index_pages.rs  license_check.rs  mod.rs  third_party_integration.rs  web_crawler.rs
pilotcodi/ee/tabby-webserver/src/service/background_job/helper/: logger.rs
pilotcodi/ee/tabby-webserver/src/service/background_job/third_party_integration/: issues.rs  pulls.rs
pilotcodi/ee/tabby-webserver/src/service/email/: mod.rs  testutils.rs
pilotcodi/ee/tabby-webserver/src/service/page/: prompt_tools.rs
pilotcodi/ee/tabby-webserver/src/service/repository/: git.rs  mod.rs  prompt_tools.rs  third_party.rs
pilotcodi/ee/tabby-webserver/src/service/utils/: mod.rs  prompt.rs
pilotcodi/ee/tabby-webserver/ui/: 404.html  activities.html  api.html  chat.html  experiments.html  files.html  index.html  jobs.html  pages.html  profile.html  reports.html  search.html  system.html
pilotcodi/ee/tabby-webserver/ui/_next/static/chunks/: 1731-8ddc21d17c1db3d5.js  3396-2ca6ad3ee124641e.js  4526-b6d4584afffa9c34.js  6978-91523ca6231ea70b.js  8040-e8a363d23bfc20c6.js  9634-eb02e61df3d21583.js
pilotcodi/ee/tabby-webserver/ui/_next/static/chunks/app/: layout-a9dfde7e4294922d.js  not-found-8fdd48e65bd803b1.js
pilotcodi/ee/tabby-webserver/ui/_next/static/chunks/app/(dashboard)/: layout-de28a1a7a97aea73.js
pilotcodi/ee/tabby-webserver/ui/_next/static/chunks/app/(home)/: page-aa009efa8145ca58.js
pilotcodi/ee/tabby-webserver/ui/_next/static/chunks/app/chat/: page-2122febecd87f45a.js
pilotcodi/ee/tabby-webserver/ui/auth/: reset-password.html  signin.html  signup.html
pilotcodi/ee/tabby-webserver/ui/jobs/: detail.html
pilotcodi/ee/tabby-webserver/ui/settings/: general.html  mail.html  sso.html  subscription.html  team.html
pilotcodi/ee/tabby-webserver/ui/settings/providers/: doc.html  git.html  github-self-hosted.html  github.html  gitlab-self-hosted.html  gitlab.html
pilotcodi/ee/tabby-webserver/ui/settings/providers/doc/: new.html
pilotcodi/ee/tabby-webserver/ui/settings/providers/git/: new.html
pilotcodi/ee/tabby-webserver/ui/settings/providers/github/: detail.html  new.html
pilotcodi/ee/tabby-webserver/ui/settings/providers/github-self-hosted/: detail.html  new.html
pilotcodi/ee/tabby-webserver/ui/settings/providers/gitlab/: detail.html  new.html
pilotcodi/ee/tabby-webserver/ui/settings/providers/gitlab-self-hosted/: detail.html  new.html
pilotcodi/ee/tabby-webserver/ui/settings/sso/: new.html
pilotcodi/ee/tabby-webserver/ui/settings/sso/detail/: github.html  gitlab.html  google.html  ldap.html
pilotcodi/ee/tabby-webserver/ui/settings/team/: groups.html
(+6337 files in other folders)
