[package]
name = "pilotcodi-download"
version = "0.30.0-dev.0"
edition = "2021"

[dependencies]
aim-downloader = { path = "../aim-downloader" }
pilotcodi-common = { path = "../pilotcodi-common" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
