[package]
name = "pilotcodi-webserver"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
prod = []

[dependencies]
anyhow.workspace = true
argon2 = "0.5.1"
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
bincode = "1.3.3"
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
hyper = { workspace = true, features = ["client"] }
jsonwebtoken = "9.1.0"
juniper.workspace = true
juniper_axum = { version = "0.2", features = ["subscriptions"] }
juniper_graphql_ws = "0.4"
lazy_static.workspace = true
ldap3 = "0.11.0"
lettre = { version = "0.11.3", features = ["tokio1", "tokio1-native-tls"] }
mime_guess.workspace = true
pin-project = "1.1.3"
querystring = "1.1.0"
reqwest = { workspace = true, features = ["json"] }
rust-embed = "8.0.0"
serde.workspace = true
serde_json.workspace = true
pilotcodi-common = { path = "../../crates/pilotcodi-common" }
pilotcodi-index = { path = "../../crates/pilotcodi-index" }
pilotcodi-inference = { path = "../../crates/pilotcodi-inference" }
pilotcodi-schema = { path = "../../ee/pilotcodi-schema" }
pilotcodi-db = { path = "../../ee/pilotcodi-db" }
tarpc = { version = "0.33.0", features = ["serde-transport"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-tungstenite = "0.21"
tower-http = { workspace = true, features = ["fs"] }
tower ={ workspace = true }
tracing.workspace = true
url = { workspace = true }
urlencoding = "2.1.3"
pilotcodi-git = { path = "../../crates/pilotcodi-git" }
pilotcodi-crawler = { path = "../../crates/pilotcodi-crawler" }
octocrab = "0.42.1"
fs_extra = "1.3.0"
gitlab = "0.1700.1"
uuid.workspace = true
strum.workspace = true
cron = "0.12.1"
async-stream.workspace = true
logkit.workspace = true
async-openai-alt.workspace = true
ratelimit.workspace = true
cached.workspace = true
humantime = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "preserve_order"] }

[dev-dependencies]
assert_matches.workspace = true
tokio = { workspace = true, features = ["macros"] }
pilotcodi-db = { path = "../../ee/pilotcodi-db", features = ["testutils"] }
pilotcodi-common = { path = "../../crates/pilotcodi-common", features = ["testutils"] }
serial_test = { workspace = true }
temp_testdir = { workspace = true }
insta = { workspace = true, features = ["yaml", "redactions"] }
